<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.coveros.demo</groupId>
  <artifactId>helloworld</artifactId>
  <version>1.1</version>
  <packaging>jar</packaging>

  <name>Hello World</name>
  <description>The most basic of Java programs.</description>
  <url>https://www.coveros.com/</url>
  <inceptionYear>2018</inceptionYear>
  
  
  <dependencies>
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.8.1</version>
        <scope>test</scope>
    </dependency>
  </dependencies>
  
  
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jdk.version>1.8</jdk.version>

    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
  </properties>

  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M1</version>
            <configuration>
                <forkCount>0</forkCount> <!-- changed this to 0 -->
                
                <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
                <printSummary>true</printSummary>
                <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->

                <!-- run test in headless mode -->
                <systemPropertyVariables>
                    <glass.platform>Monocle</glass.platform>
                    <monocle.platform>Headless</monocle.platform>
                    <prism.order>d3d</prism.order>
                </systemPropertyVariables>

                <argLine>
                    --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                </argLine>
            </configuration>
        </plugin>
        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
        </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.7.7.201606060606</version>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <!-- attached to Maven test phase -->
            <execution>
              <id>report</id>
              <phase>test</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
    </plugins>
  </build>
</project>
